--- a/pom.xml
+++ b/pom.xml
@@ -78,14 +78,14 @@
         <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
-          <version>5.1.34</version>
+          <version>6.0.6</version>
         </dependency>
         <!-- oracle驱动包 -->
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>RELEASE</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.oracle</groupId>-->
+<!--            <artifactId>ojdbc6</artifactId>-->
+<!--            <version>RELEASE</version>-->
+<!--        </dependency>-->
 
         <!-- springframework start -->
         <dependency>
