--- a/src/main/resources/mybatisGeneratorConfig.properties
+++ b/src/main/resources/mybatisGeneratorConfig.properties
@@ -23,7 +23,7 @@ entity.targetPackage = src/main/java
 
 # mapper.xml路径
 mapper.targetProject = src/main/resources
-mapper.targetPackage = com.hao.xu.lang.student.mapper
+mapper.targetPackage = com.hao.xu.lang.mapper.student
 
 # mapper interface
 mapper.interface.targetProject = src/main/java
