Google com.google.zxing 生成二维码

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,20 @@
         </dependency>
         <!-- atomikos 多数据源事务管理 分布式事务 end -->
 
+        <!-- Google 生成二维码 start -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <!-- Google 生成二维码 end -->
+
+
     </dependencies>
     <build>
         <plugins>
